[package]
name = "nrf52-demo"
version = "0.1.0"
authors = ["Brian Cully <bjc@kublai.com>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.5"
panic-abort = "~0.3"
nb = "~0.1"
adafruit-nrf52-bluefruit-le = { path = "../nrf52-hal/boards/adafruit-nrf52-bluefruit-le" }
nrf52832-hal = { path = "../nrf52-hal/nrf52832-hal" }
embedded-hal = { path = "../embedded-hal" }
clint = { path = "../clint" }

[dependencies.cortex-m]
version = "0.5.8"
features = ["inline-asm", "const-fn"]
